fix: missing search icon on small screens (#1080)

--- a/frontend/static/css/components/menu.css
+++ b/frontend/static/css/components/menu.css
@@ -37,6 +37,10 @@
         }
 
         @media only screen and (max-width : 570px) {
+            .menu-left {
+                min-width: auto;
+            }
+            
             .menu-burger {
                 display: block;
             }
